...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_shard_bg_mobile"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/messages_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:listitem="@layout/item_message">

            </android.support.v7.widget.RecyclerView>
...
