...
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_profile_icon"
                android:title="Profile" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="Log Out" />
        </menu>
    </item>

</menu>

